Opened 15 years ago

Closed 15 years ago

#6147 closed bug (fixed)

Misspelled include header name in LocaleKit.h

Reported by: beos_zealot Owned by: pulkomandy
Priority: normal Milestone: R1
Component: Kits/Locale Kit Version: R1/alpha2
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

LocaleKit.h header contains misspelled header <Catlog.h>, it should be <Catalog.h>.

Spotted in Haiku gcc4 hrev37058 and few revisions earlier. Haiku was build from sources under Linux.

Change History (1)

comment:1 by stippi, 15 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev37065. Thanks.

Note: See TracTickets for help on using tickets.