Fixed misspelled header, closes ticket #6147.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@37065 a95241bf-73f2-0310-859d-f6bbb57e9c96